--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+<header></header>
+<div class="content">
+    <form action="#" method="POST"></form>
+    <aside></aside>
+</div>
+<footer></footer>
 
 </body>
 </html>
