add h1, content-fa wrapper, security elements

--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Mint > Start Here</title>
     <link rel="stylesheet" href="main.css">
 </head>
-<body>
-<header></header>
-<div class="content">
-    <form action="#" method="POST"></form>
-    <aside></aside>
-</div>
-<footer></footer>
 
+<body>
+    <div class="wrapper">
+        <header></header>
+        <div class="content">
+            <div class="content-fa">
+                <h1>Create a new account</h1>
+                <form action="#" method="POST"></form>
+                <aside>
+                    <div class="security"></div>
+                </aside>
+            </div>
+        </div>
+        <footer></footer>
+    </div>
 </body>
+
 </html>
