add header content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 
 <body>
     <div class="wrapper">
-        <header></header>
+        <header>
+            <div class="hc">
+                <div class="logo">
+                    <img src="images/mint.png" height="53" width="129" alt="Mint">
+                </div>
+                <div class="links">
+                    <nav>
+                        <ul>
+                            <li class="signup"><a href="#">Sign Up</a></li>
+                            <li class="login"><a href="#">Login</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </header>
         <div class="content">
             <div class="content-fa">
                 <h1>Create a new account</h1>
