--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="content-fa">
                 <h1>Create a new account</h1>
                 <form action="#" method="POST">
+                    <fieldset class="email-info">
                         <label>
                             Your Email
                             <input type="email" name="email-address">
@@ -61,6 +62,7 @@
                             <input type="checkbox" name="agree">
                             Yes, I agree to the Mint Terms of Use.
                         </label>
+                    </fieldset>
                     <input type="submit" name="submit" value="Sign up">
                 </form>
                 <aside>
