add footer content

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                             </select>
                         </label>
                         <label>
-                            Zip Code <br>
+                            Zip Code
+                            <br>
                             <input type="text" name="zipcode" id="zipcode">
                         </label>
                         <label>
@@ -77,7 +78,24 @@
                 </aside>
             </div>
         </div>
-        <footer></footer>
+        <footer>
+            <div class="notices">
+                <ul>
+                    <li><a href="#">Support Community</a></li>
+                    <li><a href="#">Terms of Use</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Legal and Trademark Notices</a></li>
+                    <li><a href="#">About Intuit</a></li>
+                </ul>
+            </div>
+            <div class="certs">
+                <img src="images/norton.png" height="53" width="102" alt="">
+                <img src="images/truste.png" height="50" width="155" alt="">
+            </div>
+            <div class="copyright">
+            &#64; 2015 Inuit, Inc | ph6754.4 - spa50.12
+            </div>
+        </footer>
     </div>
 </body>
 
