--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                     <fieldset class="email-info">
                         <label>
                             Your Email
-                            <input type="email" name="email-address">
+                            <input type="email" name="email-address" autofocus required>
                         </label>
                         <label>
                             Confirm Email
-                            <input type="email" name="confirm-email">
+                            <input type="email" name="confirm-email" required>
                         </label>
                         <label>
                             Country
@@ -49,18 +49,18 @@
                         <label>
                             Zip Code
                             <br>
-                            <input type="text" name="zipcode" id="zipcode">
+                            <input type="text" name="zipcode" id="zipcode" required>
                         </label>
                         <label>
                             Password
-                            <input type="password" name="password">
+                            <input type="password" name="password" required>
                         </label>
                         <label>
                             Confirm Password
-                            <input type="password" name="confirm-password">
+                            <input type="password" name="confirm-password" required>
                         </label>
                         <label class="checkbox">
-                            <input type="checkbox" name="agree"> Yes, I agree to the Mint Terms of Use.
+                            <input type="checkbox" name="agree" required> Yes, I agree to the Mint Terms of Use.
                         </label>
                     </fieldset>
                     <input class="btn" type="submit" name="submit" value="Sign up">
