Add charcode to entitle remove form action and post

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Mint > Start Here</title>
+    <title>Mint &gt; Start Here</title>
     <link rel="stylesheet" href="main.css">
 </head>
 
@@ -27,14 +27,13 @@
         <div class="content">
             <div class="content-fa">
                 <h1>Create a new account</h1>
-                <form action="#" method="POST">
+                <form>
                     <fieldset class="email-info">
                         <label>
                             Your Email
                             <input type="email" name="email-address" autofocus required>
                         </label>
                         <label>
-                            Confirm Email
                             <input type="email" name="confirm-email" required>
                         </label>
                         <label>
