Add Confirm Email label

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                             <input type="email" name="email-address" autofocus required>
                         </label>
                         <label>
+                             Confirm Email
                             <input type="email" name="confirm-email" required>
                         </label>
                         <label>
