Add action and post to form

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="content">
             <div class="content-fa">
                 <h1>Create a new account</h1>
-                <form>
+                <form action="#" method="POST">
                     <fieldset class="email-info">
                         <label>
                             Your Email
